--- a/c03x_sorkin.html
+++ b/c03x_sorkin.html
@@ -13,13 +13,13 @@
 </style>
 	<meta charset="utf-8">
 	<title>San Joaquin Valley Town Hall</title>
-	<link rel="shortcut icon" href="../images/favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 	<h1>Andrew Ross Sorkin, author of <em>Too Big to Fail</em></h1>
 
 	<h2>November 16, 2010</h2>
-	<img src="../images/sorkin_desk260.jpg" width="260px">
+	<img src="sorkin_desk260.jpg" width="260px">
 	
 	<div>
 		<p>New York Times columnist and author, Andrew Ross Sorkin, has been described as "the most famous financial journalist of his generation." His book, <em>Too Big to Fail</em>, was the first behind-the-scenes account of the financial crisis that led to our current recession.</p>
