--- a/c03x_sorkin.html
+++ b/c03x_sorkin.html
@@ -41,7 +41,7 @@
 		<p>"I am watching this for the 3rd time, trying to understand how this large group of capitalist pigs could royally screw their families, descendants, neighbors, countrymen and the rest of the whole world with absolutely no compassion."</p>
 		</div>
 
-	Prepared by: Your Name
+	Prepared by: Elijah Cozier
 	
 	<footer>
 		Date: 	March 21, 2022
